--- a/Front/TccApp-Web/src/app/shared/nav/nav.component.html
+++ b/Front/TccApp-Web/src/app/shared/nav/nav.component.html
@@ -20,6 +20,9 @@
             <a class="nav-link" routerLink="palestrantes">Palestrantes</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="associados">Associados</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" routerLink="contatos">Contatos</a>
           </li>
         </ng-container>
