--- a/Front/TccApp-Web/src/app/components/associado/associado.component.html
+++ b/Front/TccApp-Web/src/app/components/associado/associado.component.html
@@ -26,7 +26,8 @@
             {{!exibirImagem ? 'exibir' : 'ocultar'}}
           </button>
         </th>
-        <th>#</th>
+        <!-- <th>#</th> -->
+        <th>Status</th>
         <th>Nome</th>
         <th>E-Mail</th>
         <th>Estado</th>
@@ -40,9 +41,10 @@
           <img [collapse]="!exibirImagem" [isAnimated]="true" [src]="getImagemURL(associado.imagemUrl)"
             [style.width.px]="larguraImagem" [style.margin.px]="margemImagem">
         </td>
-        <td>{{associado.id}}</td>
+        <!-- <td>{{associado.id}}</td> -->
+        <td>{{getStatusCadastroTypeNome(associado.statusCadastro)}}</td>
         <td>{{associado.nome}}</td>
-        <td>{{associado.email}}</td>        
+        <td>{{associado.email}}</td>
         <td>{{associado.cidadeNome}}</td>
         <td>{{associado.estadoNome}}</td>
         <td>
@@ -61,9 +63,6 @@
       </tr>
     </tfoot>
   </table>
-
-
-
 
   <!-- <div *ngIf="associados && associados.length" class="row mt-2">
     <div class="col-md-4 mb-4 d-flex align-items-stretch" *ngFor="let associado of associados">
