--- a/Front/TccApp-Maui/TccApp/05-MVVM/Views/SobrePage.xaml
+++ b/Front/TccApp-Maui/TccApp/05-MVVM/Views/SobrePage.xaml
@@ -7,7 +7,7 @@
     <ScrollView>
         <Grid RowDefinitions="Auto,*">
             <Image
-            Source="logo.png"
+            Source="tcc_logo1.jpg"
             SemanticProperties.Description="Logo do sistema"
             HeightRequest="350"
             VerticalOptions="Center"
