--- a/Front/TccApp-Web/src/app/components/associado/associado-detalhe/associado-detalhe.component.html
+++ b/Front/TccApp-Web/src/app/components/associado/associado-detalhe/associado-detalhe.component.html
@@ -11,6 +11,16 @@
 
           <div class="p-3">
             <div class="form-row">
+              <div class="form-group col-md-4">
+                <label for="statusCadastro" class="form-label">Status Cadastro</label>
+                <select id="statusCadastro" formControlName="statusCadastro" [ngClass]="cssValidator(f.statusCadastro)" class="form-control"
+                  [ngClass]="{ 'is-invalid': f.statusCadastro.errors && f.statusCadastro.touched }">
+                  <option *ngFor="let item of statusCadastroTypes" [value]="item.value">{{item.text}}</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-row">
               <div class="form-group col-md-5">
                 <label for="nome" class="form-label">Nome</label>
                 <input id="nome" formControlName="nome"  [ngClass]="cssValidator(f.nome)"type="text" class="form-control" #focus>
@@ -160,51 +170,53 @@
 
       <tab class="border border-top-0 p-3">
         <ng-template tabHeading>
-          <i class="fa fa-address-card mr-2"></i><span>Veiculo</span>
+          <i class="fa fa-address-card mr-2"></i><span>Veiculos</span>
         </ng-template>
         <div class="p-3">
           <div class="d-flex border-bottom">
             <h2 class="mr-auto">Veiculos do Associado</h2>
             <h2><i class="fa-solid fa-car"></i></h2>
           </div>
-          <div class="form-row p-1">
-            <div [formGroup]="form" class="col">
-              <div formArrayName="veiculos" *ngFor="let veiculo of veiculos.controls; let i=index">
-                <fieldset [formGroupName]="i" class="form-group">
-                  <legend class="d-flex justify-content-between capitalize">
-                    {{ (veiculos.get(i+'.marcaModelo').value) }}
-                    <button (click)="removerVeiculo(template, i)" class="p-2 btn btn-sm btn-outline-warning mb-1 d-flex"
-                      tooltip="Excluir Veiculo" [adaptivePosition]="false" [delay]="500" placement="left">
-                      <i class="fa fa-window-close my-1"></i>
-                      <b class="ml-1 d-none d-sm-block">Excluir</b>
-                    </button>
-                  </legend>
-                  <div class="row">
-                    <div class="form-group col-md-4">
-                      <label>Placa</label>
-                      <input [ngClass]="cssValidator(veiculos.get(i+'.placa'))" type="text" class="form-control"
-                        formControlName="placa" placeholder="Placa">
-                    </div>
-                    <div class="form-group col-md-4">
-                      <label>Marca Modelo</label>
-                      <input [ngClass]="cssValidator(veiculos.get(i+'.marcaModelo'))" type="text" class="form-control"
-                        formControlName="marcaModelo" placeholder="Marca Modelo">
-                    </div>
-                    <div class="form-group col-md-4">
-                      <label>Ano Modelo</label>
-                      <input [ngClass]="cssValidator(veiculos.get(i+'.anoModelo'))" type="text" class="form-control"
-                        mask="9999" max="2024" formControlName="anoModelo" placeholder="Ano Modelo">
-                    </div>
-                    <div class="form-group col-md-4">
-                      <label>Valor da Fipe (R$)</label>
-                      <input [ngClass]="cssValidator(veiculos.get(i+'.valorFipe'))" type="text" class="form-control"
-                        formControlName="valorFipe" placeholder="Valor da Fipe (R$)">
-                    </div>
-                  </div>
-                </fieldset>
-              </div>
-            </div>
-          </div>
+          <table class="table table-striped table-hover">
+            <thead class="thead-dark">
+              <tr>
+                <th>Status</th>
+                <th>Placa</th>
+                <th>Marca/Modelo</th>
+                <th>Ano Modelo</th>
+                <th>Valor Fipe</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody *ngIf="listaVeiculos && listaVeiculos.length">
+              <tr *ngFor="let veiculo of listaVeiculos" (click)="editVeiculo(veiculo.id)" style="cursor: pointer;">                
+                <td>{{getStatusCadastroTypeNome(veiculo.statusCadastro)}}</td>
+                <td>{{veiculo.placa}}</td>
+                <td>{{veiculo.marcaModelo}}</td>
+                <td>{{veiculo.anoModelo}}</td>
+                <td>R$ {{veiculo.valorFipe}}</td>
+                <td>
+                  <button type="button" class="btn btn-danger btn-lg" tooltip="Excluir"
+                    (click)="openModal($event, template, veiculo.id)">
+                    <i class="fa fa-trash"></i>
+                  </button>
+                </td>
+                <!-- <td>
+                  <button type="button" class="btn btn-danger btn-lg" tooltip="Excluir">
+                    <i class="fa fa-trash"></i>
+                  </button>
+                </td> -->
+              </tr>
+            </tbody>
+            <tfoot *ngIf="!listaVeiculos.length">
+              <tr>
+                <td colspan="8" class="text-center">
+                  <h4>Nenhum Veiculo encontrado!</h4>
+                </td>
+              </tr>
+            </tfoot>
+          </table>
+
           <button (click)="adicionarVeiculo()" class="d-flex btn btn-outline-primary">
             <i class="fa fa-plus-circle my-1"></i>
             <b class="ml-1">Veiculo</b>
@@ -212,11 +224,8 @@
         </div>
         <div class="card-footer">
           <div class="d-flex">
-            <button class="btn btn-outline-secondary mr-auto border">
+            <button class="btn btn-outline-secondary mr-auto border" (click)="cancelarAlteracao()">
               Cancelar Alteração
-            </button>
-            <button [disabled]="!form.controls.veiculos.valid" (click)="salvarVeiculos()" class="btn btn-success">
-              Salvar Veiculos
             </button>
           </div>
         </div>
